--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-# {prefix}/{name}{profileSeparator}{profile}/properties.key
+# {prefix}/{name}{profileSeparator}{profile}/parameter.key
 
 aws:
   paramstore:
